--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to GitHub Version</h1>
-    <h3>Keep on Moving! Do Your Thing!</h3>
+    <h1>Welcome to GitHub Version Control, the best in the world!</h1>
+    <h3>Keep on Moving! Shut up and do it!!!</h3>
 </body>
 </html>
