--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to GitHub Version</h1>
-    <h3>Keep on Moving! Do Your Thing!</h3>
+    <h1>Welcome to Gitty</h1>
+    <h3>Keep on Moving! Do Your Thing and bring sexy back!</h3>
 </body>
 </html>
