--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <h1>Welcome to GitHub Version Control, the best in the world! Who do you think you are?!</h1>
     <h3>Keep on Moving! Shut up and do it!!! Im absolutely famished!</h3>
+
+    <p>Shut up and focus!</p>
     
 </body>
 </html>
